Fixed modal popup issue on mobile

--- a/listApp/static/css/modal.css
+++ b/listApp/static/css/modal.css
@@ -24,3 +24,22 @@
   a.property-modal-card-link:hover{
     color:inherit;
   }
+
+  .modal {
+    position: fixed;
+    top: 3%;
+    right: 3%;
+    left: 3%;
+    bottom: 3%;
+    width: auto;
+    margin: 0;
+    }
+    
+    .modal-body {
+      height: 60%;
+      max-height: 350px;
+      padding: 15px;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
+      }
+
